# jge

./: .clang-format  .cmake-format.yaml  .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/lpc/: CMakeLists.txt  main.cpp
include/jge/: cartesian.hpp  pixels.hpp  plane.hpp
include/jge/detail/: memory.hpp  quantity_wrappers.hpp
include/jge/views/: points.hpp
tests/: CMakeLists.txt
tests/jge/: CMakeLists.txt  cartesian.cpp  plane.cpp
tests/jge/detail/: CMakeLists.txt  quantity_wrappers.cpp
tests/jge/views/: CMakeLists.txt  points.cpp
tools/cmake/: JGEFindDependencies.cmake  JGEFindTestDependencies.cmake  JGEOptions.cmake  jge-config.cmake
